[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/mixing-desk/music/song.gd" type="Script" id=1]
[ext_resource path="res://SomeToolTestings/Mixing desk/songs/IntroScene/IntroSceneP3.ogg" type="AudioStream" id=2]
[ext_resource path="res://addons/mixing-desk/music/mixing_desk_music.gd" type="Script" id=3]
[ext_resource path="res://SomeToolTestings/Mixing desk/MixingDeskTest.gd" type="Script" id=4]
[ext_resource path="res://SomeToolTestings/Mixing desk/songs/MainMenuTheme.ogg" type="AudioStream" id=5]
[ext_resource path="res://addons/mixing-desk/music/containers/core_cont.gd" type="Script" id=6]
[ext_resource path="res://SomeToolTestings/Mixing desk/songs/IntroScene/IntroSceneP1.ogg" type="AudioStream" id=7]
[ext_resource path="res://SomeToolTestings/Mixing desk/songs/IntroScene/IntroSceneP2.ogg" type="AudioStream" id=8]

[node name="MixingDeskTest" type="Node2D"]
script = ExtResource( 4 )

[node name="Music" type="Node2D" parent="."]

[node name="MixingDeskMusic" type="Node" parent="Music"]
script = ExtResource( 3 )
play_mode = 1

[node name="MainMenu" type="Node" parent="Music/MixingDeskMusic"]
script = ExtResource( 1 )
tempo = 120
bars = 129
beats_in_bar = 4
transition_beats = 2.0
transition_type = "Beat"

[node name="CoreContainer" type="Node" parent="Music/MixingDeskMusic/MainMenu"]
script = ExtResource( 6 )

[node name="MainMenuStream" type="AudioStreamPlayer" parent="Music/MixingDeskMusic/MainMenu/CoreContainer"]
stream = ExtResource( 5 )

[node name="Song1P1" type="Node" parent="Music/MixingDeskMusic"]
script = ExtResource( 1 )
tempo = 120
bars = 8
beats_in_bar = 4
transition_beats = 8.0

[node name="CoreContainer" type="Node" parent="Music/MixingDeskMusic/Song1P1"]
script = ExtResource( 6 )

[node name="1" type="AudioStreamPlayer" parent="Music/MixingDeskMusic/Song1P1/CoreContainer"]
stream = ExtResource( 7 )

[node name="Song1P2" type="Node" parent="Music/MixingDeskMusic"]
script = ExtResource( 1 )
tempo = 120
bars = 8
beats_in_bar = 4
transition_beats = 8.0

[node name="CoreContainer" type="Node" parent="Music/MixingDeskMusic/Song1P2"]
script = ExtResource( 6 )

[node name="1" type="AudioStreamPlayer" parent="Music/MixingDeskMusic/Song1P2/CoreContainer"]
stream = ExtResource( 8 )

[node name="Song1P3" type="Node" parent="Music/MixingDeskMusic"]
script = ExtResource( 1 )
tempo = 120
bars = 88
beats_in_bar = 4
transition_beats = 2.0

[node name="CoreContainer" type="Node" parent="Music/MixingDeskMusic/Song1P3"]
script = ExtResource( 6 )

[node name="1" type="AudioStreamPlayer" parent="Music/MixingDeskMusic/Song1P3/CoreContainer"]
stream = ExtResource( 2 )

[node name="Song1" type="Node" parent="Music/MixingDeskMusic"]
script = ExtResource( 1 )

[node name="CoreContainer" type="Node" parent="Music/MixingDeskMusic/Song1"]
script = ExtResource( 6 )

[node name="1" type="AudioStreamPlayer" parent="Music/MixingDeskMusic/Song1/CoreContainer"]
stream = ExtResource( 7 )

[node name="2" type="AudioStreamPlayer" parent="Music/MixingDeskMusic/Song1/CoreContainer"]
stream = ExtResource( 8 )

[node name="3" type="AudioStreamPlayer" parent="Music/MixingDeskMusic/Song1/CoreContainer"]
stream = ExtResource( 2 )

[node name="UI" type="CenterContainer" parent="."]
margin_right = 158.0
margin_bottom = 40.0
rect_min_size = Vector2( 1024, 600 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
margin_left = 225.0
margin_top = 272.0
margin_right = 798.0
margin_bottom = 327.0
size_flags_horizontal = 3
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/HBoxContainer"]
margin_right = 79.0
margin_bottom = 55.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Song2Button" type="Button" parent="UI/HBoxContainer/VBoxContainer2"]
margin_right = 79.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( 132, 51 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "MainMenu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeType" type="VBoxContainer" parent="UI/HBoxContainer"]
margin_left = 129.0
margin_right = 251.0
margin_bottom = 55.0

[node name="InstantFade12" type="Button" parent="UI/HBoxContainer/FadeType"]
margin_right = 122.0
margin_bottom = 20.0
text = "-> Instant fade ->"

[node name="InstantFade21" type="Button" parent="UI/HBoxContainer/FadeType"]
margin_top = 24.0
margin_right = 122.0
margin_bottom = 44.0
text = "<- Instant fade <-"

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HBoxContainer"]
margin_left = 301.0
margin_right = 573.0
margin_bottom = 55.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15

[node name="Song1Button" type="Button" parent="UI/HBoxContainer/VBoxContainer"]
margin_right = 272.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 132, 51 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Song 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI/HBoxContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 272.0
margin_bottom = 55.0
custom_constants/separation = 10

[node name="LoopPart1" type="Button" parent="UI/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 84.0
margin_bottom = 20.0
text = "Loop part 1"

[node name="LoopPart2" type="Button" parent="UI/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 94.0
margin_right = 178.0
margin_bottom = 20.0
text = "Loop part 2"

[node name="LoopPart3" type="Button" parent="UI/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 188.0
margin_right = 272.0
margin_bottom = 20.0
text = "Loop part 3"

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 512, 300 )
current = true

[connection signal="bar_changed" from="Music/MixingDeskMusic" to="." method="_on_MixingDeskMusic_bar_changed"]
[connection signal="beat" from="Music/MixingDeskMusic" to="." method="_on_MixingDeskMusic_beat"]
[connection signal="core_loop_finished" from="Music/MixingDeskMusic" to="." method="_on_MixingDeskMusic_core_loop_finished"]
[connection signal="shuffle" from="Music/MixingDeskMusic" to="." method="_on_MixingDeskMusic_shuffle"]
[connection signal="song_changed" from="Music/MixingDeskMusic" to="." method="_on_MixingDeskMusic_song_changed"]
[connection signal="pressed" from="UI/HBoxContainer/VBoxContainer2/Song2Button" to="." method="_on_Song2Button_pressed"]
[connection signal="pressed" from="UI/HBoxContainer/FadeType/InstantFade12" to="." method="_on_InstantFade12_pressed"]
[connection signal="pressed" from="UI/HBoxContainer/FadeType/InstantFade21" to="." method="_on_InstantFade21_pressed"]
[connection signal="pressed" from="UI/HBoxContainer/VBoxContainer/Song1Button" to="." method="_on_Song1Button_pressed"]
[connection signal="pressed" from="UI/HBoxContainer/VBoxContainer/HBoxContainer/LoopPart1" to="." method="_on_LoopPart1_pressed"]
[connection signal="pressed" from="UI/HBoxContainer/VBoxContainer/HBoxContainer/LoopPart2" to="." method="_on_LoopPart2_pressed"]
[connection signal="pressed" from="UI/HBoxContainer/VBoxContainer/HBoxContainer/LoopPart3" to="." method="_on_LoopPart3_pressed"]
